--- a/design.ui
+++ b/design.ui
@@ -661,7 +661,7 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="2">
+      <item row="6" column="0" colspan="4">
        <widget class="QPushButton" name="btn_record">
         <property name="enabled">
          <bool>true</bool>
@@ -695,36 +695,7 @@
 }</string>
         </property>
         <property name="text">
-         <string>Записать</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="2" colspan="2">
-       <widget class="QPushButton" name="btn_result">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QWidget {
-	color: white;
-	background-color: #343434;
-	font-family: Rubik;
-	font-size: 20pt;
-	font-weight: 500;
-	border-radius: 37;
-}</string>
-        </property>
-        <property name="text">
-         <string>Посчитать</string>
-        </property>
-        <property name="checkable">
-         <bool>false</bool>
+         <string>Запись</string>
         </property>
        </widget>
       </item>
